split into two columns and fix text align issue

--- a/src/main/resources/static/css/customize.css
+++ b/src/main/resources/static/css/customize.css
@@ -206,3 +206,7 @@ body, button, input, p, select, textarea, label, h1, h2, h3, h4 {
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
+
+.service-columns {
+    width: 100%;
+}
